--- a/styles/App.css
+++ b/styles/App.css
@@ -1,6 +1,6 @@
 .App {
-  height: 100vh;
-  background-color: rgb(20, 20, 20);
+  height: auto;
+ 
   text-align: center;
   overflow: hidden;
 }
@@ -11,8 +11,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 30px 0 30px;
-  color: white;
-  position: relative;
+  color: black;
 }
 
 .authed-container {
@@ -87,12 +86,12 @@ button:disabled {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  
   bottom: 0 px;
   width: 100%;
   bottom: 0;
   left: 0;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .twitter-logo {
@@ -103,7 +102,7 @@ button:disabled {
 .footer-text {
   font-size: 16px;
   font-weight: bold;
-  color: white;
+  color: black;
 }
 
 .connected-container input[type='text'] {
@@ -152,7 +151,7 @@ button:disabled {
   top: 20px;
   right: 20px;
   cursor: pointer;
-  color:white;
+  color:black;
   background-color: transparent;
   transition: all 0.3s ease;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -165,7 +164,7 @@ button:disabled {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 5px;
 }
 /* KeyFrames */
 @-webkit-keyframes gradient-animation {
