--- a/styles/CreateProduct.module.css
+++ b/styles/CreateProduct.module.css
@@ -25,7 +25,7 @@
 }
 
 .create_product_form {
-  color: white;
+  color: black;
   display: flex;
   flex-direction: column;
 }
@@ -132,5 +132,5 @@
   box-sizing: border-box;
   margin: 10px 0;
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
 }
