--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("/BackgroundWhiteBluePurple.d23a4bbd.png");
+  height: auto;
 }
 
 a {
